--- a/assests/style.css
+++ b/assests/style.css
@@ -2,7 +2,10 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
   }
-  
+  #line
+  {
+    color:aqua;
+  }
   textarea {
     background: transparent;
     border: none;
